force-app/main/default/objects/SiteUser__c/SiteUser__c.object-meta.xml
<CustomObject>
    <description>Forma parte del circuito del Sitio Portal Web.</description>
    <label>SiteUser</label>
    <nameField>
        <label>Nombre de SiteUser</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SiteUsers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>