force-app/main/default/objects/SiteUser__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <formula>Account__r.Owner.FirstName + &quot; &quot; + Account__r.Owner.LastName</formula>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>