force-app/main/default/objects/SiteUser__c/fields/Brand_GDM__c.field-meta.xml
<CustomField>
    <fullName>Brand_GDM__c</fullName>
    <defaultValue>true</defaultValue>
    <label>View Brand GDM</label>
    <type>Checkbox</type>
</CustomField>