force-app/main/default/objects/SiteUser__c/fields/Brand_Name_Button__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand Name Button</label>
    <type>Checkbox</type>
</CustomField>