force-app/main/default/objects/SiteUser__c/fields/Brand_Name_Button_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name_Button_Visibility__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Brand Name Button Visibility</label>
    <type>Checkbox</type>
</CustomField>