force-app/main/default/objects/SiteUser__c/fields/Brand_VIRTUE__c.field-meta.xml
<CustomField>
    <fullName>Brand_VIRTUE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>View Brand VIRTUE</label>
    <type>Checkbox</type>
</CustomField>