force-app/main/default/objects/SiteUser__c/fields/Cadastro_pela_primeira_vez__c.field-meta.xml
<CustomField>
    <fullName>Cadastro_pela_primeira_vez__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has login before</label>
    <type>Checkbox</type>
</CustomField>