force-app/main/default/objects/SiteUser__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <formula>IF(OR(CONTAINS(Email__c, &apos;gdmseeds&apos;), CONTAINS(Email__c, &apos;recursiva&apos;), CONTAINS(Email__c, &apos;donmario&apos;)) ,&apos;GDM&apos;,&apos;CUSTOMER&apos;)</formula>
    <label>Customer</label>
    <type>Text</type>
</CustomField>