force-app/main/default/objects/SiteUser__c/fields/Excel_Charts_Export_Custom_Color__c.field-meta.xml
<CustomField>
    <fullName>Excel_Charts_Export_Custom_Color__c</fullName>
    <description>Indicates the selected color saved for the export in Excel of the analytics charts. Option available in Access at SteUser level.</description>
    <inlineHelpText>Indicates the selected color saved for the export in Excel of the analytics charts. Option available in Access at SteUser level.</inlineHelpText>
    <label>Excel Charts Export Custom Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>