force-app/main/default/objects/SiteUser__c/fields/Has_accepted_terms__c.field-meta.xml
<CustomField>
    <fullName>Has_accepted_terms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has accepted terms</label>
    <type>Checkbox</type>
</CustomField>