force-app/main/default/objects/SiteUser__c/fields/Has_reset_password__c.field-meta.xml
<CustomField>
    <fullName>Has_reset_password__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has reset password</label>
    <type>Checkbox</type>
</CustomField>