force-app/main/default/objects/SiteUser__c/fields/Menu_Section__c.field-meta.xml
<CustomField>
    <fullName>Menu_Section__c</fullName>
    <label>Menu Section</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PRODUCTS</fullName>
            </value>
            <value>
                <fullName>BUSINESS</fullName>
            </value>
            <value>
                <fullName>REPORTING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>