force-app/main/default/objects/SiteUser__c/fields/New_Siteuser_Request_Approver__c.field-meta.xml
<CustomField>
    <fullName>New_Siteuser_Request_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Siteuser Request Approver</label>
    <referenceTo>SiteUser__c</referenceTo>
    <relationshipLabel>SiteUsers</relationshipLabel>
    <relationshipName>SiteUsers</relationshipName>
    <type>Lookup</type>
</CustomField>