force-app/main/default/objects/SiteUser__c/fields/Notificaiton_Visit_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Notificaiton_Visit_Reminder__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Notificaiton - Visit Reminder</label>
    <type>Checkbox</type>
</CustomField>