force-app/main/default/objects/SiteUser__c/fields/Notification_Bean_Blog__c.field-meta.xml
<CustomField>
    <fullName>Notification_Bean_Blog__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Notification - Bean Blog</label>
    <type>Checkbox</type>
</CustomField>