force-app/main/default/objects/SiteUser__c/fields/Notification_Blog_Post_Regions__c.field-meta.xml
<CustomField>
    <fullName>Notification_Blog_Post_Regions__c</fullName>
    <label>Notification - Blog Post Regions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>East Coast</fullName>
            </value>
            <value>
                <fullName>Mid South</fullName>
            </value>
            <value>
                <fullName>Southern Cornbelt</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>Northern Cornbelt</fullName>
            </value>
            <value>
                <fullName>Mindakca</fullName>
            </value>
            <value>
                <fullName>Central Cornbelt</fullName>
            </value>
            <value>
                <fullName>Eastern Cornbelt</fullName>
            </value>
            <value>
                <fullName>Great Lakes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>