force-app/main/default/objects/SiteUser__c/fields/Notification_Invitation_Response__c.field-meta.xml
<CustomField>
    <fullName>Notification_Invitation_Response__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Notification - Invitation Response</label>
    <type>Checkbox</type>
</CustomField>