force-app/main/default/objects/SiteUser__c/fields/Notification_Irrigation_Changes__c.field-meta.xml
<CustomField>
    <fullName>Notification_Irrigation_Changes__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Notification - Irrigation Changes</label>
    <type>Checkbox</type>
</CustomField>