force-app/main/default/objects/SiteUser__c/fields/Notification_Visit_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Notification_Visit_Reminder__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Notification - Visit Reminder</label>
    <type>Checkbox</type>
</CustomField>