force-app/main/default/objects/SiteUser__c/fields/Presentation_Custom_Color__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Custom_Color__c</fullName>
    <description>This is the color the customer chose to use for customizing their exported presentation</description>
    <label>Presentation Custom Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>