force-app/main/default/objects/SiteUser__c/fields/Presentation_Custom_Logo__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Custom_Logo__c</fullName>
    <description>This is the Logo that the customer uploaded to use for customizing their exported presentation.</description>
    <label>Presentation Custom Logo</label>
    <type>TextArea</type>
</CustomField>