force-app/main/default/objects/SiteUser__c/fields/Profile_Pic__c.field-meta.xml
<CustomField>
    <fullName>Profile_Pic__c</fullName>
    <label>Profile Pic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>