force-app/main/default/objects/SiteUser__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Regions</label>
    <length>40</length>
    <type>Text</type>
</CustomField>