force-app/main/default/objects/SiteUser__c/fields/Reset_by_Company__c.field-meta.xml
<CustomField>
    <fullName>Reset_by_Company__c</fullName>
    <label>Reset by Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>