force-app/main/default/objects/SiteUser__c/fields/Show_source_Access_Toggle__c.field-meta.xml
<CustomField>
    <fullName>Show_source_Access_Toggle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggles whether this SiteUser wants to see the source in Access Analytics pages. Only for users whose account has visibility for the source field</description>
    <inlineHelpText>Toggles whether this SiteUser wants to see the source in Access Analytics pages. Only for users whose account has visibility for the source field</inlineHelpText>
    <label>Show source Access Toggle</label>
    <type>Checkbox</type>
</CustomField>