force-app/main/default/objects/SiteUser__c/fields/SiteUserProfile__c.field-meta.xml
<CustomField>
    <fullName>SiteUserProfile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SiteUserProfile</label>
    <referenceTo>SiteUserProfile__c</referenceTo>
    <relationshipLabel>SiteUsers</relationshipLabel>
    <relationshipName>SiteUsers</relationshipName>
    <type>Lookup</type>
</CustomField>