force-app/main/default/objects/SiteUser__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Status__c</columns>
    <columns>Cadastro_pela_primeira_vez__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Brand_VIRTUE__c</columns>
    <columns>Brand_GDM__c</columns>
    <columns>Brand_DONMARIO__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>