force-app/main/default/objects/SiteUser__c/listViews/All_users_notification_columns.listView-meta.xml
<ListView>
    <fullName>All_users_notification_columns</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Email__c</columns>
    <columns>Notification_Bean_Blog__c</columns>
    <columns>Notification_Blog_Post_Regions__c</columns>
    <columns>Notification_Invitation_Response__c</columns>
    <columns>Notification_Irrigation_Changes__c</columns>
    <columns>Notification_Visit__c</columns>
    <columns>Notification_Visit_Cancellation__c</columns>
    <columns>Notification_Visit_Invitation__c</columns>
    <columns>Notification_Visit_Reminder__c</columns>
    <columns>Brand_GDM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>All BLOG ON and notification columns</label>
</ListView>