force-app/main/default/objects/SiteUser__c/listViews/GDM_actives.listView-meta.xml
<ListView>
    <fullName>GDM_actives</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Admin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Rejected</value>
    </filters>
    <filters>
        <field>Email__c</field>
        <operation>contains</operation>
        <value>gdmseeds.com,donmario.com</value>
    </filters>
    <label>GDM actives</label>
</ListView>