force-app/main/default/objects/SiteUser__c/listViews/Not_GDM_actives.listView-meta.xml
<ListView>
    <fullName>Not_GDM_actives</fullName>
    <columns>NAME</columns>
    <columns>Cadastro_pela_primeira_vez__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account__c</columns>
    <columns>Email__c</columns>
    <columns>Account_Owner__c</columns>
    <columns>Country__c</columns>
    <columns>Brand_DONMARIO__c</columns>
    <columns>Brand_VIRTUE__c</columns>
    <columns>Notification_Bean_Blog__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>Email__c</field>
        <operation>notContain</operation>
        <value>gdmseeds.com,donmario.com</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>United States</value>
    </filters>
    <label>Not GDM actives USA</label>
</ListView>