force-app/main/default/objects/SiteUser__c/listViews/Pending_for_Authorization.listView-meta.xml
<ListView>
    <fullName>Pending_for_Authorization</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Cadastro_pela_primeira_vez__c</columns>
    <columns>Password__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Authorization</label>
</ListView>