force-app/main/default/objects/SiteUser__c/listViews/VIRTUE_actives.listView-meta.xml
<ListView>
    <fullName>VIRTUE_actives</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Admin__c</columns>
    <columns>Brand_DONMARIO__c</columns>
    <columns>Brand_GDM__c</columns>
    <columns>Brand_VIRTUE__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Rejected</value>
    </filters>
    <filters>
        <field>Email__c</field>
        <operation>notContain</operation>
        <value>gdm,donmario,recursiva</value>
    </filters>
    <filters>
        <field>Brand_VIRTUE__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>VIRTUE actives</label>
</ListView>